--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,14 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+flake8 = "*"
+black = "*"
 
 [packages]
 django = "==3.2.25"
 
 [requires]
-python_version = "3.12" 
+python_version = "3.12"
+
+[pipenv]
+allow_prereleases = true 
