--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
-  "python.pythonPath": "/Users/test/.local/share/virtualenvs/airbnb-backend-CWUpjTtF/bin/python",
-  "python.linting.flake8Enabled": true,
-  "python.linting.pylintEnabled": false,
-  "python.linting.enabled": true,
-  "python.formatting.provider": "black",
-  "python.linting.flake8Args": ["--max-line-length=88"]
+  "python.defaultInterpreterPath": "/Users/test/.local/share/virtualenvs/airbnb-backend-CWUpjTtF/bin/python",
+  "editor.formatOnSave": true,
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": "explicit"
+    }
+  },
+  "flake8.args": ["--max-line-length=120"],
+  "pylint.enabled": false
 } 
