#3.2 pillow 패키지 추가. 유저 모델 필드 추가

--- a/Pipfile
+++ b/Pipfile
@@ -9,9 +9,10 @@ black = "*"
 
 [packages]
 django = "==3.2.25"
+pillow = "*"
 
 [requires]
 python_version = "3.12"
 
 [pipenv]
-allow_prereleases = true 
+allow_prereleases = true
