#14.1 strawberry graphql 설치, 기본 schema, query 추가

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.12"
 django = "^4.2.0"
 pillow = "^11.3.0"
 djangorestframework = "^3.13.1"
+strawberry-graphql = "^0.282.0"
+strawberry-graphql-django = "^0.65.1"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.0.0"
