--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ djangorestframework = "^3.13.1"
 strawberry-graphql = "^0.282.0"
 strawberry-graphql-django = "^0.65.1"
 pyjwt = "^2.10.1"
+django-environ = "^0.12.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.0.0"
